Fixes text align and section size on small screens

--- a/src/sass/_section.scss
+++ b/src/sass/_section.scss
@@ -1,5 +1,5 @@
 section {
-  width: 100%;
+  width: 95%;
   min-height: 100vh;
 
   margin: 0 auto;
