--- a/src/sass/page/_sections.scss
+++ b/src/sass/page/_sections.scss
@@ -2,6 +2,7 @@
   @media #{$medium-and-down} {
     .vertical {
       align-items: center;
+      text-align: center;
     }
   }
 
